# Skilltune

./: .gitignore  README.md  package.json  tsconfig.json
docs/: LICENSING.md
extension/: manifest.json
scripts/: build-extension.ts  dev-extension.ts  test-profile.ts  test-writer.ts
server/: app.py  database.py  pyproject.toml  requirements.txt  scan_results.db
server/agents/: csv_writer.py  job_scorer.py  posting_analysis.py  resume_writer.py
server/scripts/: resume_writer.py  test_writer.py
server/skills/: skill_manager.py
server/tests/: conftest.py  test_api.py
server/tools/: __init__.py
src/: index.ts
src/background/: service-worker.ts
src/content/: content-script.ts
src/popup/: Dashboard.tsx  Onboarding.tsx  Popup.tsx  index.html  index.tsx  theme.css
src/services/: scanner.ts
src/services/mastra/: index.ts  memory.ts
src/services/mastra/agents/: posting-analysis-agent.ts  profiling-agent.ts  resume-writer.ts
src/services/mastra/tools/: compile-typst.ts  index.ts  read-directory.ts  typst-compile.ts  write-typst-file.ts  writer.ts
src/services/skills/: index.ts
src/shared/: filesystem.ts  scan.ts  state.ts  storage.ts  types.ts
