[project]
name = "skilltune"
version = "0.1.0"
description = "Skilltune — Agentic resume adjuster (Python LangChain backend)"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "langchain>=0.3",
    "langchain-deepseek>=0.1",
    "langgraph>=0.3",
    "langchain-core>=0.3",
    "langchain-community>=0.3",
    "langchain-experimental>=0.3",
    "python-dotenv>=1.0",
    "scikit-learn>=1.3",
]
